--- a/resume.html
+++ b/resume.html
@@ -132,7 +132,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Current</h6>
-          <p>Web Development % Python</p>
+          <p>Web Development & Python</p>
           <hr>
         </div>
         <div class="w3-container">
