--- a/index.html
+++ b/index.html
@@ -59,19 +59,11 @@
 					<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>I am happy to hear from you.</p>
+							<p>I'm happy to hear from you.</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#" >
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
+									<form method="get" action="mailto:yemigeorgejnr@yahoo.com?subject=Portfolio%20response&body=message" >
+										<div class="fields">											
 											<div class="field">
 												<label for="message">Message</label>
 												<textarea name="message" id="message" rows="5"></textarea>
