--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <!-- <img src="/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar"> -->
-          <div class="w3-display-bottomleft w3-container w3-text-black">
+          <div class="w3-container w3-text-black">
             <h2>Yemi George</h2>
           </div>
         </div>
@@ -39,13 +39,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
           <ul>
             <li>
-              <p>Motoko: Writing Dapps and smart contracts in DFINITY's motoko language and Deploying them into canisters on DFINITY's Internet Computer.</p>
+              <p>Motoko: Writing Dapps and smart contracts in DFINITY's motoko language and Deploying them into canisters on DFINITY's Internet Computer. This is related to my current blockchain development passion as DFINITY seems to run light and economical which makes it easy for myself to explore.</p>
           <!-- <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
           </div> -->
             </li>
             <li>
-              <p>Node.js: Utilized the open weather API for my own weather application.</p>
+              <p>Node.js: Proficient in using Node with npm express; currently expanding my ability to create tools using available express packages.</p>
           <!-- <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
@@ -61,7 +61,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div> -->
             </li>
             <li>
-              <p>Music and Sound Engineering: Music mixing and mastering for mainstream media productions.</p>        
+              <p>Music and Sound Engineering: Music mixing and mastering for mainstream media productions. Proficient with popular tools and DAWs such as Pro Tools, Logic Pro, Cubase and FL Studio.</p>        
           <!-- <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
           </div> -->
@@ -102,43 +102,38 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Creative Assistance and Remote Tech Assistance / Dunno Services Inc</b></h5>
+          <h5 class="w3-opacity"><b>Audio Engineer / Dunno Services Inc</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Creative assistance for musicians specifically Sound Engineering: mixing tracks together to form great musical synchronization content to go with video content or just stand alone music.</p>
+          <p>Creative sound engineering specifically for musicians: mixing and mastering audio tracks to form captivating musical synchronization contents to go with videos or for just stand-alone music.</p>
           <hr>
         </div>
       
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Insurance Advisor / belairdirect.ca</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2019 - Aug 2020</h6>
-          <p>Home and auto insurance advisor: I was responsible for prioritizing and recommending specific insurance needs for the company's clients (over a thousand under my care).</p>
+          <p>Home and auto insurance advisor: I was responsible for calculating premiums based on risk assessment and customized insurance policies based on the needs of our clients. I sought out new clients using self-generated lists of prospects as part of my sales effort and acted as a liaison between our underwriters and customers.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Event Staff / D&D Party Rental</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - Feb 2019</h6>
-          <p>Event equipment sales, rentals and service engagement.</p>
+          <p>I was responsible for taking customer orders for equipment and product rental for events and other customer needs.</p>
           <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Tech Support / Shaw Communications</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2013 - Apr 2016</h6>
-          <p>Network setup & troubleshooting using multiple tools. </p><br>
-        </div>
+        </div>       
       </div>
 
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Current</h6>
-          <p>Web Development & Python</p>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Web Development & Python</h6>
+          <p>Current</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>edX - Harvard</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>CS50x - Introduction to Computer Science</h6>
-          <p>Certificate</p>
+          <p>Current</p>
           <hr>
         </div>
         <div class="w3-container">
@@ -160,8 +155,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p><a href="mailto:yemigeorgejnr@yahoo.com">eMail me</a></p>
   
-  <a class="fa fa-github w3-hover-opacity" href="https://github.com/yg1222"></a>
-  <a class="fa fa-linkedin w3-hover-opacity" href="#"></a>
+  <a class="fa fa-github w3-hover-opacity" target="_blank" rel="noopener noreferrer" href="https://github.com/yg1222"></a>
+  <a class="fa fa-linkedin w3-hover-opacity" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/yemi-george-jr-b48065249/"></a>
   <p>© 2022 Yemi George Jr.</p>
 </footer>
 
