--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">											
-												<li><a href="https://github.com/yg1222" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/yg1222" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/yemi-george-jr-b48065249/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
