--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Yemi George. All rights reserved.</li>
+						<li>&copy; Yemi George Jr. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
