--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="https://weatherpeek.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="image"><img src="images/weatherpeek.png" alt="" data-position="center center" /></a>
+							<a href="https://bit.ly/yemigeorgejr-project1" target="_blank" rel="noopener noreferrer" class="image"><img src="images/weatherpeek.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Weather Peek</h2>
 									<p>My handy Weather application capable of querying any city for the current weather conditions. Built using python (Flask). </p>
 									<ul class="actions">
-										<li><a href="https://weatherpeek.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="button">Check it out</a></li>
+										<li><a href="https://bit.ly/yemigeorgejr-project1" target="_blank" rel="noopener noreferrer" class="button">Check it out</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,7 +86,7 @@
 											<h3>Social</h3>
 											<ul class="icons">											
 												<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/yg1222" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/yemi-george-jr-b48065249/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a target="_blank" rel="noopener noreferrer" href="https://bit.ly/yemigeorgejr-linkedin" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
