--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div> -->
             </li>
             <li>
-              <p>Flask: Python framework for backend web applications. Check out my implementation using Flask with an API <a href="https://weatherpeek.herokuapp.com/">here</a>.  </p>
+              <p>Flask: Python framework for backend web applications. Check out my implementation using Flask with an API <a href="https://bit.ly/yemigeorgejr-project1">here</a>.  </p>
           <!-- <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
@@ -156,7 +156,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <p><a href="mailto:yemigeorgejnr@yahoo.com">eMail me</a></p>
   
   <a class="fa fa-github w3-hover-opacity" target="_blank" rel="noopener noreferrer" href="https://github.com/yg1222"></a>
-  <a class="fa fa-linkedin w3-hover-opacity" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/yemi-george-jr-b48065249/"></a>
+  <a class="fa fa-linkedin w3-hover-opacity" target="_blank" rel="noopener noreferrer" href="https://bit.ly/yemigeorgejr-linkedin"></a>
   <p>© 2022 Yemi George Jr.</p>
 </footer>
 
