--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="mailto:yemigeorgejnr@yahoo.com?subject=Portfolio%20response&body=message" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
@@ -79,7 +79,7 @@
 										
 										<li>
 											<h3>Email</h3>
-											<a href="mailto:yemigeorgejnr@yahoo.com">yemigeorgejnr@yahoo.com</a>
+											<a href="mailto:yemigeorgejnr@yahoo.com?subject=Portfolio%20response">yemigeorgejnr@yahoo.com</a>
 										</li>
 										
 										<li>
