--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 											<h3>Social</h3>
 											<ul class="icons">											
 												<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/yg1222" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a target="_blank" rel="noopener noreferrer" href="https://bit.ly/yemigeorgejr-linkedin" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a target="_blank" rel="noopener noreferrer" href="www.linkedin.com/in/yemigeorgejr" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
