--- a/resume.html
+++ b/resume.html
@@ -156,7 +156,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <p><a href="mailto:yemigeorgejnr@yahoo.com">eMail me</a></p>
   
   <a class="fa fa-github w3-hover-opacity" target="_blank" rel="noopener noreferrer" href="https://github.com/yg1222"></a>
-  <a class="fa fa-linkedin w3-hover-opacity" target="_blank" rel="noopener noreferrer" href="https://bit.ly/yemigeorgejr-linkedin"></a>
+  <a class="fa fa-linkedin w3-hover-opacity" target="_blank" rel="noopener noreferrer" href="www.linkedin.com/in/yemigeorgejr"></a>
   <p>© 2022 Yemi George Jr.</p>
 </footer>
 
