--- a/resume.html
+++ b/resume.html
@@ -117,7 +117,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Event Staff / D&D Party Rental</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - Feb 2019</h6>
-          <p>I was responsible for taking customer orders for equipment and product rental for events and other customer needs.</p>
+          <p>I had the pleasure of executing well-laid-out event plans, making them a reality for our clients, and making them enthusiastic about doing business with us again and again.</p>
           <hr>
         </div>       
       </div>
