--- a/resume.html
+++ b/resume.html
@@ -25,12 +25,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <!-- <img src="/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar"> -->
-          <div class="w3-container w3-text-black">
+          <div class="w3-container w3-text-white">
             <h2>Yemi George Jr.</h2>
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Developer, Creative, Problem solver</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Developer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Calgary, AB</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>yemigeorgejnr@yahoo.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>6475242170</p>
@@ -51,6 +51,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">80%</div>
             </div>
           </div> -->
+            </li>
+            <li>
+              <p>Python</p>
             </li>
             <li>
               <p>Flask: Python framework for backend web applications. Check out my implementation using Flask with an API <a href="https://bit.ly/yemigeorgejr-project1">here</a>.  </p>
@@ -104,20 +107,20 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Audio Engineer / Dunno Services Inc</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2020 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Creative sound engineering specifically for musicians: mixing and mastering audio tracks to form captivating musical synchronization contents to go with videos or for just stand-alone music.</p>
+          <p>I engineer creative sounds specifically for musicians: mixing and mastering audio tracks to form captivating musical synchronization contents to go with videos or for just stand-alone music.</p>
           <hr>
         </div>
       
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Insurance Advisor / belairdirect.ca</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2019 - Aug 2020</h6>
-          <p>Home and auto insurance advisor: I was responsible for calculating premiums based on risk assessment and customized insurance policies based on the needs of our clients. I sought out new clients using self-generated lists of prospects as part of my sales effort and acted as a liaison between our underwriters and customers.</p>
+          <p>Home and auto insurance advisor: <br>I calculated premiums based on risk assessment and customized insurance policies based on the needs of our clients. I sought out new clients using self-generated lists of prospects as part of my sales effort and acted as a liaison between our underwriters and customers.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Event Staff / D&D Party Rental</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - Feb 2019</h6>
-          <p>I had the pleasure of executing well-laid-out event plans, making them a reality for our clients, and making them enthusiastic about doing business with us again and again.</p>
+          <p>I executed laid-out constructive plans, making them a reality for our clients, and solidifying their enthusiasm about doing more business with our company.</p>
           <hr>
         </div>       
       </div>
