--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<h2>Weather Peek</h2>
 									<p>My handy Weather application capable of querying any city for the current weather conditions. Built using python (Flask). </p>
 									<ul class="actions">
-										<li><a href="https://bit.ly/yemigeorgejr-project1" target="_blank" rel="noopener noreferrer" class="button">Check it out</a></li>
+										<li><a href="https://weather-peek-production.up.railway.app" target="_blank" rel="noopener noreferrer" class="button">Check it out</a></li>
 									</ul>
 								</div>
 							</div>
