--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="https://bit.ly/yemigeorgejr-project1" target="_blank" rel="noopener noreferrer" class="image"><img src="images/weatherpeek.png" alt="" data-position="center center" /></a>
+							<a href="https://weather-peek-production.up.railway.app/" target="_blank" rel="noopener noreferrer" class="image"><img src="images/weatherpeek.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Weather Peek</h2>
