--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
           <ul>
             <li>
-              <p>Motoko: Writing Dapps and smart contracts in DFINITY's motoko language and Deploying them into canisters on DFINITY's Internet Computer. This is related to my current blockchain development passion as DFINITY seems to run light and economical which makes it easy for myself to explore.</p>
+              <p>Motoko: Writing Dapps and smart contracts in DFINITY's motoko language and Deploying them into canisters on DFINITY's Internet Computer. Constantly building on this skill and staying up to date with this technology.</p>
           <!-- <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
           </div> -->
