--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <p>Python</p>
             </li>
             <li>
-              <p>Flask: Python framework for backend web applications. Check out my implementation using Flask with an API <a href="https://weather-peek-production.up.railway.app">here</a>.  </p>
+              <p>Flask: Python framework for backend web applications. Explore my implementation of a weather application on the web using Flask with an API <a href="https://weather-peek-production.up.railway.app">here</a>.  </p>
           <!-- <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
@@ -64,7 +64,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div> -->
             </li>
             <li>
-              <p>Music and Sound Engineering: Music mixing and mastering for mainstream media productions. Proficient with popular tools and DAWs such as Pro Tools, Logic Pro, Cubase and FL Studio.</p>        
+              <p>Music and Sound Engineering: Music mixing and mastering for mainstream media productions. Proficient with popular tools and DAWs such as Pro Tools, Logic Pro, Cubase, and FL Studio.</p>        
           <!-- <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
           </div> -->
