--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</div>
 					</section>
 
-				<!-- One -->
+				<!-- One Weather Peek -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
 							<a href="https://weather-peek-production.up.railway.app/" target="_blank" rel="noopener noreferrer" class="image"><img src="images/weatherpeek.png" alt="" data-position="center center" /></a>
@@ -52,10 +52,26 @@
 								</div>
 							</div>
 						</section>
+
+					<!-- Two  Bill of Lading Generator-->
+					</section>
+					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<a href="https://bill-of-lading-production.up.railway.app" target="_blank" rel="noopener noreferrer" class="image"><img src="images/billoflading.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Bill Of Lading Generator</h2>
+									<p>Generates a Bill of Lading PDF file based on data input to a form. This is useful in the logistics industry as a simple and quick tool. </p>
+									<ul class="actions">
+										<li><a href="https://bill-of-lading-production.up.railway.app" target="_blank" rel="noopener noreferrer" class="button">Check it out</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 					
 					</section>
 
-				<!-- Two -->					
+				<!-- Three -->					
 					<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
@@ -92,7 +108,7 @@
 					</ul>
 				</div>
 			</footer>
-
+			
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
